--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
  <div class="playlist">
        <button>
-        <a href="pag02.html">PLAYLIST</a>
+        <a href="https://strangehell64.github.io/For-Baby/">PLAYLIST</a>
     </button>
 </div>
  
